<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">海关技术中心</string>
    <string name="string_toast_privacy_service">"请同意隐私政策和服务协议"</string>
    <string name="string_privacy">我同意本海关技术中心的隐私政策和服务协议</string>
    <string name="reg_title">注册</string>
    <string name="login_title">登陆</string>
    <string name="forget_title">忘记密码?</string>
    <string name="ic_def_title">图标</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bom_nav_home_title">首页</string>
    <string name="bom_nav_office_title">办公</string>
    <string name="bom_nav_msg_title">消息</string>
    <string name="bom_nav_my_title">我的</string>

    <string name="reg_confirm">重置密码</string>

    <string name="titlebar_search_hint">输入证书编码</string>

    <string name="string_privacy_setting">隐私政策 | 服务协议</string>
    <string name="title_activity_delegate_regist">DelegateRegistActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>